...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/habitTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Title (20 characters max)"
                android:inputType="textPersonName"
                android:minHeight="48dp"></EditText>

            <EditText
                android:id="@+id/reasonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Reason (30 characters max)"
                android:inputType="textPersonName"
                android:minHeight="48dp"></EditText>
...
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="Start Date"
                    android:textSize="20sp"></TextView>

                <Button
                    android:id="@+id/dateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="Toggle" />

            </LinearLayout>

            <CalendarView
                android:id="@+id/calendarView2"
                android:layout_width="match_parent"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="Frequency"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/frequencyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="Toggle" />

            </LinearLayout>
...
                    android:text="Custom"
                    android:textSize="8dp" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TableLayout
                android:id="@+id/customSelector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:padding="8dp">

                    <CheckBox
                        android:id="@+id/mondayBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:maxLines="1"
                        android:text="Monday" />

                    <CheckBox
                        android:id="@+id/tuesdayBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:maxLines="1"
                        android:text="Tuesday" />

                    <CheckBox
                        android:id="@+id/wednesdayBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
...
